css/style.css
/* ... */
#services .service {
  padding: 20px 10px; }

#services h2 {
  color: #f6f6f6; }

#services h3 {
  font-size: 20px;
  font-weight: 600;
  color: #f6f6f6; }

#services p {
  color: rgba(255, 255, 255, 0.7); }

.space {
  margin-top: 40px; }

#services i.fa {
  font-size: 36px;
  color: #13314e;
  transition: all 0.5s; }

/* Gallery Section */
#works {
  padding: 120px 0;
  background: #f6f6f6; }

.categories {
  padding-bottom: 20px;
  text-align: center;
  position: relative;
  left: -26px; }

ul.cat li {
  display: inline-block; }

ol.type li {
  display: inline-block;
  margin-left: 20px; }
  @media (max-width: 500px) {
    ol.type li {
      margin-bottom: 20px; } }

ol.type li a {
  color: #777;
  padding: 8px 16px;
  border: 1px solid #ccc;
  border-radius: 2px; }

ol.type li a.active {
  color: #f6f6f6;
  border: 1px solid #cf5022;
  background: #cf5022; }

ol.type li a:hover {
  color: #f6f6f6;
  border: 1px solid #cf5022;
  background: #cf5022; }

.isotope-item {
  z-index: 2; }

.isotope-hidden.isotope-item {
  z-index: 1; }

.isotope, .isotope .isotope-item {
  /* change duration value to whatever you like */
  -webkit-transition-duration: 0.8s;
  -moz-transition-duration: 0.8s;
  transition-duration: 0.8s; }

.isotope-item {
  margin-right: -1px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden; }

.isotope {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transition-property: height, width;
  -moz-transition-property: height, width;
  transition-property: height, width; }

.isotope .isotope-item {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transition-property: -webkit-transform, opacity;
  -moz-transition-property: -moz-transform, opacity;
  transition-property: transform, opacity; }

.portfolio-item {
  margin-bottom: 30px; }

.portfolio-item {
  background: #13314e; }
  .portfolio-item .hover-bg {
    max-height: 210px;
    overflow: hidden;
    position: relative;
    transition: all 0.5s; }

.portfolio-item .hover-bg:hover {
  opacity: .6;
  transition: all 0.5s;
  background: #13314e; }

.hover-bg .hover-text {
  text-align: center;
  margin: 0;
  background: rgba(0, 0, 0, 0.4);
  transition: all 0.5s;
  position: absolute;
  bottom: 0;
  width: 100%;
  z-index: 1; }

.tour-icon {
  position: absolute;
  z-index: 1;
  color: white;
  background: #13314e;
  padding: 5px;
  border-radius: 6px;
  text-transform: uppercase;
  right: 2px;
  top: 2px;
  font-size: 10px; }

.hover-bg:hover .hover-text {
  padding-bottom: 4%; }

.hover-bg .hover-text > h4 {
  opacity: 1;
  margin: 0;
  transition: all 0.3s;
  color: #f6f6f6;
  padding: 3%; }

.hover-bg:hover .hover-text > h4 {
  opacity: 1; }

.hover-bg img {
  transition: all .5s; }
  @media (min-width: 1200px) {
    .hover-bg img {
      min-height: 210px; } }
  @media (max-width: 1199px) and (min-width: 992px) {
    .hover-bg img {
      height: 170px; } }

.hover-bg:hover img {
  transition: all .5s;
  transform: scale(1.2) translateY(-3%); }

.hover-bg .hover-text > p {
  opacity: 1;
  -webkit-transform: translateY(100%);
  transform: translateY(100%);
  transition: all 0.3s; }

.hover-bg:hover .hover-text > p {
  opacity: 1;
  -webkit-backface-visibility: hidden;
  -webkit-transform: translateY(0);
  transform: translateY(0); }

.hover-bg .hover-text > i {
  opacity: 1;
  -webkit-transform: translateY(0);
  transform: translateY(0);
  transition: all 0.3s; }

.hover-bg:hover .hover-text > i {
  opacity: 1;
  -webkit-backface-visibility: hidden;
  -webkit-transform: translateY(100%);
  transform: translateY(100%); }

.hover-bg:hover .hover-text {
  opacity: 1; }

#works i.fa {
  font-size: 20px;
  padding: 5px;
  color: #F4D03F; }

/* Team Section */
#team {
  padding: 140px 0;
  background: #e6e6e6; }

img.img-thumbnail.team-img {
  width: 200px;
  height: 200px;
  border: 0;
  border-radius: 0;
  background-color: #f6f6f6; }

#team .thumbnail {
  background: transparent;
  border: 0; }

#team .thumbnail .caption {
  padding: 9px;
  color: #777; }

/* Testimonials Section */
#testimonials {
  background: url(../img/testimonials-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  color: #ddd;
  padding: 140px 0; }

#testimonials h2 {
  color: #f6f6f6; }

#testimonials blockquote {
  position: relative;
  margin-top: 20px;
  border: 0;
  text-align: center;
  color: rgba(255, 255, 255, 0.8); }

#testimonials i {
  font-size: 24px;
  color: rgba(255, 255, 255, 0.3);
  margin-bottom: 14px; }

#testimonials .clients-name {
  display: inline-block;
  border-top: 1px solid rgba(255, 255, 255, 0.3);
  padding: 20px 0;
  margin-top: 10px; }

/* Contact Section */
#contact {
  padding: 120px 0 40px 0;
  background: #f6f6f6; }

#contact .contact-item {
  padding: 10px;
  margin: 10px;
  height: 100px;
  border-radius: 4px; }

#contact h3 {
  font-size: 20px;
  font-weight: 400;
  margin-top: 40px; }

#contact form {
  padding: 30px 0; }

#contact i.fa {
  font-size: 22px;
  color: #13314e;
  margin-bottom: 10px; }

#contact .text-danger {
  color: #ff3333;
  text-align: left; }

label {
  font-size: 12px;
  font-weight: 400;
  font-family: 'Open Sans', sans-serif;
  float: left; }

#contact .form-control {
  display: block;
  width: 100%;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.42857143;
  color: #555;
  background-color: #fff;
  background-image: none;
  border: 1px solid #ccc;
  border-radius: 2px;
  -webkit-box-shadow: none;
  box-shadow: none;
  -webkit-transition: none;
  -o-transition: none;
  transition: none; }

#contact .form-control:focus {
  border-color: inherit;
  outline: 0;
  -webkit-box-shadow: transparent;
  box-shadow: transparent; }

#contact .btn-default {
  background: #cf5022;
  border: 0;
  border-radius: 4px;
  padding: 10px 20px;
  color: #f6f6f6;
  margin-top: 15px;
  font-size: 15px; }
/* ... */

